@@ -9,10 +9,12 @@ package org.elasticsearch.xpack.deprecation;
 import org.elasticsearch.action.ActionRequest;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.client.Client;
+import org.elasticsearch.client.OriginSettingClient;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
+import org.elasticsearch.common.logging.RateLimitingFilter;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.IndexScopedSettings;
 import org.elasticsearch.common.settings.Setting;
@@ -29,27 +31,43 @@ import org.elasticsearch.rest.RestHandler;
 import org.elasticsearch.script.ScriptService;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.watcher.ResourceWatcherService;
+import org.elasticsearch.xpack.core.ClientHelper;
+import org.elasticsearch.xpack.deprecation.logging.DeprecationCacheResetAction;
+import org.elasticsearch.xpack.deprecation.logging.DeprecationDataStreamInitializationService;
 import org.elasticsearch.xpack.deprecation.logging.DeprecationIndexingComponent;
 import org.elasticsearch.xpack.deprecation.logging.DeprecationIndexingTemplateRegistry;
+import org.elasticsearch.xpack.deprecation.logging.RestDeprecationCacheResetAction;
+import org.elasticsearch.xpack.deprecation.logging.TransportDeprecationCacheResetAction;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
-import static org.elasticsearch.xpack.deprecation.logging.DeprecationIndexingComponent.USE_X_OPAQUE_ID_IN_FILTERING;
-import static org.elasticsearch.xpack.deprecation.logging.DeprecationIndexingComponent.WRITE_DEPRECATION_LOGS_TO_INDEX;
 
 /**
  * The plugin class for the Deprecation API
  */
 public class Deprecation extends Plugin implements ActionPlugin {
+    public static final Setting<Boolean> WRITE_DEPRECATION_LOGS_TO_INDEX = Setting.boolSetting(
+        "cluster.deprecation_indexing.enabled",
+        true,
+        Setting.Property.NodeScope,
+        Setting.Property.Dynamic
+    );
+
+    public static final Setting<Boolean> USE_X_OPAQUE_ID_IN_FILTERING = Setting.boolSetting(
+        "cluster.deprecation_indexing.x_opaque_id_used.enabled",
+        true,
+        Setting.Property.NodeScope,
+        Setting.Property.Dynamic
+    );
 
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
         return List.of(
                 new ActionHandler<>(DeprecationInfoAction.INSTANCE, TransportDeprecationInfoAction.class),
-                new ActionHandler<>(NodesDeprecationCheckAction.INSTANCE, TransportNodeDeprecationCheckAction.class));
+                new ActionHandler<>(NodesDeprecationCheckAction.INSTANCE, TransportNodeDeprecationCheckAction.class),
+                new ActionHandler<>(DeprecationCacheResetAction.INSTANCE, TransportDeprecationCacheResetAction.class));
     }
 
     @Override
@@ -57,9 +75,7 @@ public class Deprecation extends Plugin implements ActionPlugin {
                                              IndexScopedSettings indexScopedSettings, SettingsFilter settingsFilter,
                                              IndexNameExpressionResolver indexNameExpressionResolver,
                                              Supplier<DiscoveryNodes> nodesInCluster) {
-
-
-        return Collections.singletonList(new RestDeprecationInfoAction());
+        return List.of(new RestDeprecationInfoAction(), new RestDeprecationCacheResetAction());
     }
 
     @Override
@@ -80,9 +96,32 @@ public class Deprecation extends Plugin implements ActionPlugin {
             new DeprecationIndexingTemplateRegistry(environment.settings(), clusterService, threadPool, client, xContentRegistry);
         templateRegistry.initialize();
 
-        final DeprecationIndexingComponent component = new DeprecationIndexingComponent(client, environment.settings(), clusterService);
+        final RateLimitingFilter rateLimitingFilterForIndexing = new RateLimitingFilter();
+        //default is true, enable on start.
+        rateLimitingFilterForIndexing.setUseXOpaqueId(USE_X_OPAQUE_ID_IN_FILTERING.getDefault(environment.settings()));
 
-        return List.of(component);
+        final OriginSettingClient originSettingClient = originClient(client);
+
+        final DeprecationIndexingComponent component = new DeprecationIndexingComponent(originSettingClient,
+            environment.settings(),
+            rateLimitingFilterForIndexing,
+            WRITE_DEPRECATION_LOGS_TO_INDEX.getDefault(environment.settings())// default is true, enable on start.
+        );
+
+        clusterService.getClusterSettings().addSettingsUpdateConsumer(USE_X_OPAQUE_ID_IN_FILTERING,
+            rateLimitingFilterForIndexing::setUseXOpaqueId);
+        clusterService.getClusterSettings().addSettingsUpdateConsumer(WRITE_DEPRECATION_LOGS_TO_INDEX,
+            component::enableDeprecationLogIndexing);
+
+        DeprecationDataStreamInitializationService initializationService =
+            new DeprecationDataStreamInitializationService(originSettingClient);
+        clusterService.addListener(initializationService);
+
+        return List.of(component, rateLimitingFilterForIndexing);
+    }
+
+    private OriginSettingClient originClient(Client client) {
+        return new OriginSettingClient(client, ClientHelper.DEPRECATION_ORIGIN);
     }
 
     @Override
